# zmq-protobuf-example

./: CMakeLists.txt  README.md  event.proto
src/: client.cpp  main.cpp
